Add initial infrastructure and database configuration

--- a/Authentication.Api/appsettings.Development.json
+++ b/Authentication.Api/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "Auth": "Server=localhost,1433;Database=AuthDb;User=sa;Password=Str0ngP@ssw0rd;TrustServerCertificate=true;Persist Security Info=True;"
+    },
+    "JwtSettings": {
+        "Issuer": "AuthApp",
+        "Audience": "Auth",
+        "ExpirationTimeMin": "15",
+        "RefreshTokenExpirationTimeDays": "1"
     }
-  }
 }
