--- a/Authentication.Api/appsettings.json
+++ b/Authentication.Api/appsettings.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "Auth": "Server=localhost,1433;Database=AuthDb;User=sa;Password=Str0ngP@ssw0rd;TrustServerCertificate=true;Persist Security Info=True;"
+    },
+    "JwtSettings": {
+        "Issuer": "AuthApp",
+        "Audience": "Auth",
+        "ExpirationTimeMin": "15",
+        "RefreshTokenExpirationTimeDays": "1"
+    },
+    "AllowedHosts": "*"
 }
