--- a/Authentication.Domain/Authentication.Domain.csproj
+++ b/Authentication.Domain/Authentication.Domain.csproj
@@ -13,10 +13,14 @@
     <None Remove="Models\" />
     <None Remove="Interfaces\" />
     <None Remove="Interfaces\Repositories\" />
+    <None Remove="Interfaces\Services\" />
+    <None Remove="DTOs\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Interfaces\Repositories\" />
+    <Folder Include="Interfaces\Services\" />
+    <Folder Include="DTOs\" />
   </ItemGroup>
 </Project>
