Change audience in token

--- a/Authentication.Api/appsettings.Development.json
+++ b/Authentication.Api/appsettings.Development.json
@@ -10,7 +10,7 @@
     },
     "JwtSettings": {
         "Issuer": "AuthApp",
-        "Audience": "Auth",
+        "Audience": "Chat",
         "ExpirationTimeMin": "15",
         "RefreshTokenExpirationTimeDays": "1"
     }
