--- a/Authentication.Api/appsettings.Development.json
+++ b/Authentication.Api/appsettings.Development.json
@@ -1,12 +1,10 @@
 {
     "Logging": {
         "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+            "Default": "Debug",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.EntityFrameworkCore":  "Warning"
         }
-    },
-    "ConnectionStrings": {
-        "Auth": "Server=localhost,1433;Database=AuthDb;User=sa;Password=Str0ngP@ssw0rd;TrustServerCertificate=true;Persist Security Info=True;"
     },
     "JwtSettings": {
         "Issuer": "AuthApp",
