--- a/Authentication.Api/appsettings.json
+++ b/Authentication.Api/appsettings.json
@@ -5,12 +5,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ConnectionStrings": {
-        "Auth": "Server=localhost,1433;Database=AuthDb;User=sa;Password=Str0ngP@ssw0rd;TrustServerCertificate=true;Persist Security Info=True;"
-    },
     "JwtSettings": {
         "Issuer": "AuthApp",
-        "Audience": "Auth",
+        "Audience": "Chat",
         "ExpirationTimeMin": "15",
         "RefreshTokenExpirationTimeDays": "1"
     },
