--- a/Authentication.Api/appsettings.Development.json
+++ b/Authentication.Api/appsettings.Development.json
@@ -8,7 +8,7 @@
     },
     "JwtSettings": {
         "Issuer": "AuthApp",
-        "Audience": "Chat",
+        "Audience": "FamilyFounds",
         "ExpirationTimeMin": "15",
         "RefreshTokenExpirationTimeDays": "1"
     }
