Upgrade Jwt packages

--- a/Authentication.Api/appsettings.json
+++ b/Authentication.Api/appsettings.json
@@ -7,9 +7,10 @@
     },
     "JwtSettings": {
         "Issuer": "AuthApp",
-        "Audience": "Chat",
+        "Audience": "Chat,FamilyFounds",
         "ExpirationTimeMin": "15",
         "RefreshTokenExpirationTimeDays": "1"
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "AllowedOrigins": "http://localhost:3000, https://localhost:7129"
 }
