--- a/Authentication.Api/appsettings.json
+++ b/Authentication.Api/appsettings.json
@@ -11,6 +11,12 @@
         "ExpirationTimeMin": "15",
         "RefreshTokenExpirationTimeDays": "1"
     },
+    "CookieSettings": {
+        "HttpOnly": true,
+        "IsEssential": true,
+        "Secure": true,
+        "Domain": "localhost"
+    },
     "AllowedHosts": "*",
-    "AllowedOrigins": "http://localhost:3000, https://localhost:7129"
+    "AllowedOrigins": "http://localhost:3000, https://localhost:7129, https://localhost:3000"
 }
